# postgrest-python-poc

./: .flake8  .gitignore  Architecture.drawio  Dockerfile  Makefile  README.md  docker-compose.yml
herbaltea-classifier/: Makefile  pyproject.toml
herbaltea-classifier/herbaltea_classifier/adapters/: cli.py  postgrest.py
herbaltea-classifier/herbaltea_classifier/entities/: herbal_tea.py  indication.py
herbaltea-classifier/herbaltea_classifier/use_cases/: herbal_tea.py  indication.py  scrapers.py
herbaltea-classifier/herbaltea_classifier/use_cases/interfaces/: crud.py
herbaltea-classifier/tests/: conftest.py
herbaltea-classifier/tests/adatapers/: test_cli.py
herbaltea-classifier/tests/use_cases/: test_herbal_tea.py  test_indication.py
tools/fastapi/auth-api/: Dockerfile  Makefile  pyproject.toml
tools/fastapi/auth-api/auth_api/: __init__.py  config.py  main.py
tools/fastapi/auth-api/tests/: test_auth_api.py
tools/postgrest/: Dockerfile  Makefile  alembic.ini  apiTypes.ts  package-lock.json  pyproject.toml
tools/postgrest/alembic/: env.py
tools/postgrest/alembic/versions/: 1eed3e5529df_init_db.py  b22fbcf8d999_init_tables.py
tools/postgrest/models/: __init__.py
tools/postgrest/tests/: conftest.py  test_postgrest.py
tools/react/admin-gui/: package-lock.json  package.json
tools/react/admin-gui/src/: App.tsx  HerbalTea.tsx  Indication.tsx  Login.tsx
tools/react/public-gui/: Dockerfile  package-lock.json  package.json
tools/react/public-gui/public/: index.html  manifest.json
tools/react/public-gui/src/: App.tsx  HerbalTeaCard.tsx  HerbalTeaList.tsx  IndicationChip.tsx  IndicationFilter.tsx  IndicationListContext.tsx  LinkButton.tsx  Types.tsx  Urls.tsx
tools/terraform/environments/dev/: .terraform.lock.hcl  Makefile  main.tf  variables.tf
tools/terraform/modules/main/: containers.tf  db.tf  main.tf  providers.tf  ui.tf  variables.tf
